<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/management">
        <menu>
            <item
                android:id="@+id/item_invite_code"
                android:icon="@drawable/ic_action_invite_code"
                android:title="@string/type_invitation_code"
                app:showAsAction="never" />

            <item
                android:id="@+id/item_manage_followers"
                android:icon="@drawable/ic_action_manage_users"
                android:title="@string/manage_followers"
                app:showAsAction="never" />

            <item
                android:id="@+id/item_manage_locals"
                android:icon="@drawable/ic_action_manage_places"
                android:title="@string/manage_locals"
                app:showAsAction="never" />
        </menu>
    </item>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/item_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/settings"
                app:showAsAction="never" />

            <!--
            <item
                android:id="@+id/item_rate"
                android:icon="@drawable/ic_action_rate"
                android:title="@string/rate_this_app"
                app:showAsAction="never" />
             -->
            <item
                android:id="@+id/item_buy"
                android:icon="@drawable/ic_action_buy"
                android:title="@string/become_premium"
                app:showAsAction="never" />


            <item
                android:id="@+id/item_help"
                android:icon="@drawable/ic_action_help"
                android:title="@string/help"
                app:showAsAction="never" />

        </menu>
    </item>
    <item
        android:id="@+id/item_logout"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        android:title="@string/logout"
        app:showAsAction="never" />
<!--
    <item
        android:id="@+id/item_demo"
        android:icon="@drawable/ic_gps"
        android:title="@string/demo"
        app:showAsAction="never" />
-->
</menu>