<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout_invite_method"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.sow.gpstrackerpro.InvitationSentActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/invitation_sent"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/invitation_sent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView_invitation_sent_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/invitation_sent"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginBottom="32dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circle"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_invitation_sent" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView_invitation_sent_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/invitation_sent_1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_marginBottom="32dp"/>



            <TextView
                android:id="@+id/textView_invitation_sent_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/invitation_sent_2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_invitation_sent_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button_invitation_sent"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_invitation_sent_2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:background="@color/blue"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginBottom="32dp"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
