<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_place_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.sow.gpstrackerpro.PlaceDetailsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_place_details"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


    <fragment
        android:id="@+id/map_place_details"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout_place_details"
        android:layout_below="@id/toolbar_place_details"
        tools:layout="@layout/map_marker" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout_delete_place_holder"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/linearLayout_delete_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@color/lightGray"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/delete_place"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_place_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/places_options_bg"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_above="@+id/linearLayout_delete_place_holder"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView_place_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="Place name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary" />


        <TextView
            android:id="@+id/textView_place_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Place owner"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView_place_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Area"
            android:textSize="22sp" />

        <Switch
            android:id="@+id/switch_show_this_place_on_my_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/show_this_place_on_my_map" />

        <Switch
            android:id="@+id/switch_show_notification_from_this_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_notification_from_this_place" />

    </LinearLayout>
</RelativeLayout>
